--- a/game.html
+++ b/game.html
@@ -72,13 +72,13 @@
             <section id="summary-section" class="step-section summary-section">
                 <div class="step-header">
                     <span class="step-number">5</span>
-                    <h2 class="step-title">Ringkasan</h2>
+                    <h2 class="step-title">Ringkasan & Checkout</h2>
                 </div>
                 <div id="summary-box" class="summary-box">
                     <p class="summary-placeholder">Pilih nominal & pembayaran untuk melihat ringkasan.</p>
                 </div>
                 <button id="checkout-btn" class="btn btn-primary checkout-btn">
-                    <i class="fa-solid fa-cart-shopping"></i> Beli Sekarang
+                    <i class="fa-solid fa-cart-shopping"></i> Lanjutkan ke Pembayaran
                 </button>
             </section>
         </div>
