--- a/game.html
+++ b/game.html
@@ -69,7 +69,7 @@
                 <button id="voucher-list-btn" class="btn btn-secondary">Lihat Kode Voucher</button>
             </section>
 
-            <section id="summary-section" class="step-section summary-section">
+            <section id="summary-section" class="step-section summary-section hidden">
                 <div class="step-header">
                     <span class="step-number">5</span>
                     <h2 class="step-title">Ringkasan & Checkout</h2>
