--- a/game.html
+++ b/game.html
@@ -1,98 +1,140 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Up Game</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Top Up – Walz Shop</title>
+
+  <!-- Font -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body data-page="game">
+  <header class="header">
+    <a href="index.html" class="logo">Walz<span>Shop</span></a>
+    <nav class="nav">
+      <a class="nav-item" href="index.html">Beranda</a>
+    </nav>
+    <button class="nav-toggle" aria-label="Toggle Menu">
+      <i class="fa-solid fa-bars"></i>
+    </button>
+  </header>
 
-    <header class="header">
-        <div class="header-inner">
-            <button class="btn-back"><i class="fas fa-arrow-left"></i></button>
-            <h1 id="game-title" class="page-title">Loading...</h1>
+  <main class="container game">
+    <div class="page-head">
+      <button class="btn-link back-link" onclick="history.back()">
+        <i class="fa-solid fa-arrow-left"></i> Kembali
+      </button>
+      <h1 id="game-title" class="page-title">Memuat…</h1>
+    </div>
+
+    <div class="banner">
+      <img id="game-banner" src="" alt="Banner Game">
+    </div>
+
+    <div class="steps">
+      <!-- Step 1 -->
+      <section class="card step">
+        <div class="step__head">
+          <div class="step__num">1</div>
+          <div>
+            <h2 class="step__title">Masukkan User ID</h2>
+            <p id="game-guide" class="muted"></p>
+          </div>
         </div>
-    </header>
 
-    <main class="game-page-container">
-        <div class="game-info">
-            <div class="game-banner-container">
-                <img id="game-banner" src="" alt="Game Banner" class="game-banner">
-            </div>
+        <div class="form-grid">
+          <div class="form-group">
+            <label for="user-id">User ID</label>
+            <input id="user-id" class="input" type="text" placeholder="Contoh: 123456789"/>
+            <p id="error-user" class="error-text"></p>
+          </div>
+
+          <div id="server-group" class="form-group" style="display:none;">
+            <label for="server-id">Server ID</label>
+            <input id="server-id" class="input" type="text" placeholder="Contoh: 1234"/>
+            <p id="error-server" class="error-text"></p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Step 2 -->
+      <section class="card step">
+        <div class="step__head">
+          <div class="step__num">2</div>
+          <h2 class="step__title">Pilih Produk</h2>
+        </div>
+        <div id="product-grid" class="grid-items"></div>
+        <p id="error-product" class="error-text"></p>
+      </section>
+
+      <!-- Step 3 -->
+      <section class="card step">
+        <div class="step__head">
+          <div class="step__num">3</div>
+          <h2 class="step__title">Pilih Metode Pembayaran</h2>
+        </div>
+        <div id="payment-grid" class="grid-items grid-payments"></div>
+        <p id="error-payment" class="error-text"></p>
+      </section>
+
+      <!-- Step 4 -->
+      <section class="card step">
+        <div class="step__head">
+          <div class="step__num">4</div>
+          <h2 class="step__title">Pakai Kode Voucher (Opsional)</h2>
         </div>
 
-        <div class="steps-container">
-            <section class="step-section">
-                <div class="step-header">
-                    <span class="step-number">1</span>
-                    <h2 class="step-title">Masukkan User ID</h2>
-                </div>
-                <p class="step-guide" id="game-guide"></p>
-                <div class="input-group">
-                    <input type="text" id="user-id" placeholder="Masukkan User ID" class="input-field" required>
-                </div>
-                <div id="server-group" class="input-group">
-                    <input type="text" id="server-id" placeholder="Masukkan Server ID (contoh: 1234)" class="input-field">
-                </div>
-            </section>
-
-            <section class="step-section">
-                <div class="step-header">
-                    <span class="step-number">2</span>
-                    <h2 class="step-title">Pilih Produk</h2>
-                </div>
-                <div id="product-grid" class="products-grid">
-                    </div>
-            </section>
-
-            <section class="step-section">
-                <div class="step-header">
-                    <span class="step-number">3</span>
-                    <h2 class="step-title">Pilih Pembayaran</h2>
-                </div>
-                <div id="payment-grid" class="payments-grid">
-                    </div>
-            </section>
-
-            <section class="step-section">
-                <div class="step-header">
-                    <span class="step-number">4</span>
-                    <h2 class="step-title">Masukkan Kode Voucher</h2>
-                </div>
-                <div class="voucher-container">
-                    <input type="text" id="voucher-input" placeholder="Masukkan Kode Voucher" class="input-field voucher-input">
-                    <button id="voucher-btn" class="btn btn-primary">Gunakan</button>
-                </div>
-                <div id="voucher-status" class="voucher-status"></div>
-                <button id="voucher-list-btn" class="btn btn-secondary">Lihat Kode Voucher</button>
-            </section>
-
-            <section id="summary-section" class="step-section summary-section hidden">
-                <div class="step-header">
-                    <span class="step-number">5</span>
-                    <h2 class="step-title">Ringkasan & Checkout</h2>
-                </div>
-                <div id="summary-box" class="summary-box">
-                    <p class="summary-placeholder">Pilih nominal & pembayaran untuk melihat ringkasan.</p>
-                </div>
-                <button id="checkout-btn" class="btn btn-primary checkout-btn">
-                    <i class="fa-solid fa-cart-shopping"></i> Lanjutkan ke Pembayaran
-                </button>
-            </section>
+        <div class="voucher-row">
+          <input id="voucher-input" class="input" type="text" placeholder="Masukkan kode voucher"/>
+          <button id="voucher-btn" class="btn">Gunakan</button>
+          <button id="voucher-list-btn" class="btn btn-ghost">Lihat Kode</button>
         </div>
-    </main>
+        <p id="voucher-status" class="status-text"></p>
+      </section>
 
-    <footer class="footer">
-        <p>&copy; 2025 Walz Shop. Semua Hak Dilindungi.</p>
-    </footer>
+      <!-- Step 5 -->
+      <section id="summary-section" class="card step summary">
+        <div class="step__head">
+          <div class="step__num">5</div>
+          <h2 class="step__title">Ringkasan & Checkout</h2>
+        </div>
+        <div id="summary-box" class="summary-box">
+          <p class="muted">Pilih nominal & metode bayar untuk melihat total.</p>
+        </div>
 
-    <div id="modal-overlay"></div>
+        <!-- Harga hanya tampil setelah pilih produk + pembayaran -->
+        <div id="price-box" class="price-row" style="display:none;">
+          <div>Total</div>
+          <div id="total-price" class="price"></div>
+        </div>
 
-    <div id="checkout-modal" class="modal-content"></div>
-    <div id="voucher-list-modal" class="modal-content"></div>
+        <button id="checkout-btn" class="btn btn-primary" disabled>
+          <i class="fa-solid fa-cart-shopping"></i> Lanjutkan Pembayaran
+        </button>
+      </section>
+    </div>
+  </main>
 
-    <script src="script.js"></script>
+  <footer class="footer">
+    <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
+  </footer>
+
+  <!-- Overlay + Modal -->
+  <div id="modal-overlay"></div>
+
+  <!-- Modal Daftar Voucher -->
+  <div id="voucher-list-modal" class="modal card"></div>
+
+  <!-- Modal Checkout -->
+  <div id="checkout-modal" class="modal card"></div>
+
+  <script src="script.js"></script>
 </body>
 </html>
