--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Walz Shop – Top Up Termurah & Terpercaya</title>
 
-  <!-- Font -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
 
-  <!-- Styles -->
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body data-page="index">
@@ -29,16 +26,6 @@
   </header>
 
   <main class="container">
-    <section class="hero">
-      <div class="hero__copy">
-        <h1>Top Up Game Cepat, Aman, & Cuan</h1>
-        <p>Harga bersahabat, proses ngebut. Banyak pilihan game & metode bayar.</p>
-      </div>
-      <div class="hero__img">
-        <img src="https://files.catbox.moe/k3c37n.png" alt="Walz Shop Hero">
-      </div>
-    </section>
-
     <section class="promo">
       <h2 class="section-title">Promo Terbaru</h2>
       <div class="slider">
@@ -66,6 +53,10 @@
   <footer class="footer">
     <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
   </footer>
+
+  <a href="https://wa.me/6282298902274" class="floating-wa" target="_blank" rel="noopener">
+    <i class="fa-brands fa-whatsapp"></i>
+  </a>
 
   <div id="modal-overlay"></div>
   <script src="script.js"></script>
